# payment-validation

./: README.md  payment-validation.cabal  stack.yaml
app/: Main.hs
src/: Types.hs
src/Api/: Handlers.hs  Routes.hs
src/Database/: Account.hs  Connection.hs  Schema.sql  Transaction.hs
src/Validation/: Account.hs  Balance.hs  Core.hs  Fraud.hs  Limits.hs  Pipeline.hs
test/: Spec.hs  ValidationSpec.hs
