cabal-version:      2.4
name:               payment-validation
version:            0.1.0.0
synopsis:           Functional payment validation engine with composable pipelines
license:            BSD-3-Clause
author:             Payment Team
maintainer:         dev@example.com
build-type:         Simple

common shared-deps
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
    base              >= 4.14  && < 5,
    aeson             >= 2.0   && < 2.3,
    text              >= 1.2   && < 2.2,
    time              >= 1.9   && < 1.14,
    containers        >= 0.6   && < 0.8,
    bytestring        >= 0.10  && < 0.13,
    postgresql-simple  >= 0.6  && < 0.8,
    resource-pool      >= 0.4  && < 0.5,
    scotty             >= 0.20 && < 0.23,
    http-types         >= 0.12 && < 0.13,
    mtl                >= 2.2  && < 2.4,
    uuid               >= 1.3  && < 1.4,
    wai                >= 3.2  && < 3.3,
    wai-extra          >= 3.1  && < 3.2,
    transformers       >= 0.5  && < 0.7

library
  import:           shared-deps
  hs-source-dirs:   src
  exposed-modules:
    Types
    Validation.Core
    Validation.Balance
    Validation.Fraud
    Validation.Limits
    Validation.Account
    Validation.Pipeline
    Database.Connection
    Database.Account
    Database.Transaction
    Api.Routes
    Api.Handlers

executable payment-validation
  import:           shared-deps
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    payment-validation
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite payment-validation-test
  import:           shared-deps
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    ValidationSpec
  build-depends:
    payment-validation,
    hspec             >= 2.9  && < 2.12,
    QuickCheck        >= 2.14 && < 2.16
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
